# hiclouds3-sdk-examples

./: .gitignore  README.md
s3GoSDK/: Dockerfile  README.md  ReadMe.TXT  entrypoint.sh
s3GoSDK/sample/: BucketLoggingSerialTesting.go  Cleanup.go  Client.go  CopyObject.go  CreateBucket.go  DeleteBucket.go  DeleteObject.go  GeneratePresignedURL.go  GetBucketAcl.go  GetObjectAcl.go  GoSerialTest.go  LifecycleSerialTesting.go  ListBuckets.go  ListObjects.go  PolicySerialTesting.go  PutObject.go  VersionSerialTesting.go  client.go
s3GoSDKExample/: README.md  entrypoint.sh
s3GoSDKExample/sample/: BucketLoggingSerialTesting.go  Client.go  CreateBucket.go  (+9 more)
s3JavaSDK/: .gitignore  README.md  ReadMe.TXT  ReleaseNote.txt
s3JavaSDKExample/: Dockerfile  README.md  entrypoint.sh
s3NetSDK/: ReleaseNote.txt
s3PhpSDK/: Dockerfile  README.md  ReadMe.TXT
s3PhpSDKExample/: README.md  entrypoint.sh
s3PythonSDK/: Dockerfile  README.md  ReadMe.TXT  entrypoint.sh
s3PythonSDKExample/: .gitignore  Dockerfile  README.md  requirements.txt
s3RubySDK/: Dockerfile  README.md  entrypoint.sh
s3RubySDKExample/: Dockerfile  README.md
s3RustSDK/: Dockerfile  README.md  entrypoint.sh
s3RustSDK/sample/: Cargo.toml
s3RustSDK/sample/src/: bucket_logging_serial_testing.rs  client.rs  copy_object.rs  create_bucket.rs  delete_bucket.rs  delete_object.rs  get_bucket_acl.rs  get_object_acl.rs  lib.rs  lifecycle_serial_testing.rs  list_bucket.rs  list_object.rs  main.rs  policy_serial_testing.rs  put_object.rs  version_serial_testing.rs
s3RustSDKExample/: README.md  entrypoint.sh
(+2257 files in other folders)
